# ai-os-univ

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: baseline.md  eda.md  fetch-project-context.md  log-exp.md  log-meeting.md  monthly-review.md  new-project.md  research.md  sync-from-notion.md  weekly-review.md  work-review.md
.claude/skills/bug-investigation/: SKILL.md
.claude/skills/experiment-workflow/: SKILL.md
.claude/skills/meeting-log/: SKILL.md
.claude/skills/review-exp/: SKILL.md
.claude/skills/submit-monitor/: SKILL.md
.claude/skills/survey-papers/: SKILL.md
.claude/skills/work-implementation/: SKILL.md
ai-os/: AGENTS.md  CLAUDE.md  CODEX.md  DECISION_LOG.md  EVAL_POLICY.md  SESSION_NOTES.md  SYSTEM_SPEC.md  WORKFLOW_SPEC.md
ai-os/.claude/: settings.json
ai-os/.claude/agents/: backend-reviewer.md  code-reviewer.md  data-analyst.md  error-analyzer.md  experiment-planner.md  kaggle-researcher.md  meeting-note-writer.md  product-analyst.md  researcher.md  web-summarizer.md
ai-os/.claude/commands/: create-claude-md.md  fetch-project-context.md  review-exp.md  submit.md  (+1 more)
ai-os/competitions/: CLAUDE.md
ai-os/daily_reports/: 2026-04-01.md
ai-os/hooks/: rotate-daily-report-hook.sh  suggest-claude-md-hook.sh  sync-session-notes-hook.sh
ai-os/knowledge/: TEMPLATE.md
ai-os/knowledge-pipeline/: .env.example  .gitignore  COMMANDS.md  USAGE.md  config.yaml  main.py  requirements.txt
ai-os/retrieval/: design.md
ai-os/study/: CLAUDE.md
knowledge-pipeline/: requirements.txt
(+287 files in other folders)
